[package]
name = "stp"
version = "0.1.0"
authors = ["Sherlock Holo <sherlockya@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
crc = "1.8"
thiserror = "1.0"
futures-util = "0.3"
tokio = { version = "1.3", features = ["sync", "time", "net", "rt"] }
